--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,9 @@ on:
     branches: [ main, master ]
 
 permissions:
-  contents: read
+  pull-requests: write
+  actions: write
+  contents: write
 jobs:
   test:
     name: Test (Node ${{ matrix.node-version }})
