chore: Update Dependabot configuration to assign updates to specific user

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,8 @@ updates:
     open-pull-requests-limit: 10
     labels:
       - "dependencies"
-      - "automated"
+    assignees:
+      - "dytsou"
     commit-message:
       prefix: "chore"
       prefix-development: "chore"
