chore(deps): Update glob and related dependencies to latest versions
- Updated glob to version 13.0.0 with overrides for compatibility.
- Added js-yaml version 3.14.2 and esprima version 4.0.1.
- Removed deprecated dependencies and adjusted engine requirements for several packages.

--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "testEnvironment": "node",
     "transform": {},
     "coveragePathIgnorePatterns": []
+  },
+  "pnpm": {
+    "overrides": {
+      "glob": ">=10.5.0"
+    }
   }
 }
