--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "pnpm": {
     "overrides": {
-      "glob": ">=10.5.0"
+      "glob": ">=10.5.0",
+      "test-exclude": ">=7.0.0"
     }
   }
 }
